tries to fix text position on small phones

--- a/public/css/input.scss
+++ b/public/css/input.scss
@@ -194,7 +194,7 @@ textarea:focus {
   width: 100%;
   max-width: 500px;
   position: relative;
-  height: 100%;
+  height: 80%;
 
   h1, h2 {
     @include abs-vert-center;
@@ -412,7 +412,15 @@ textarea:focus {
 @media screen and (orientation: landscape) {
 
   .convo-question {
-    height: 50%;
+    height: 40%;
+  }
+
+}
+
+@media screen and (min-width: 380px) {
+
+  .convo-question {
+    height: 100%;
   }
 
 }
